--- a/main.html
+++ b/main.html
@@ -9,6 +9,10 @@
 
 <body>
     <div id="user"></div>
+    <input type="text" id="name">
+    <input type="text" id="age">
+    <button onclick="user.showMsg()">問候語</button>
+    <button onclick="score.showMsg()">成績</button>
     <script src="./oo.js"></script>
 
     <div id="txt"></div>
@@ -19,6 +23,13 @@
     <button id="addButton">新增按鈕</button>
     <div id="container"></div>
     <script src="./addButton.js"></script>
+
+    <br>
+    <script src="./test.js"></script>
+
+    <input type="text" id="userName" placeholder="請輸入名字">
+    <button onclick="getUserName()">送出</button>
+    <p id="resultUser"></p>
 </body>
 
 </html>
